infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
    labels:
        name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: client
    template:
        metadata:
            labels:
                component: client
        spec:
            containers:
                - image: saarthak08/blog-client
                  name: client
                  ports:
                      - containerPort: 3000

---
# CLUSTER-IP-SERVICE
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: client
    ports:
        - port: 3000
          targetPort: 3000
