infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
    labels:
        name: ingress-service
spec:
    rules:
        - host: posts.com
          http:
              paths:
                  - pathType: Prefix
                    path: /posts/create
                    backend:
                        service:
                            name: posts-cluster-ip-service
                            port:
                                number: 4000
                  - pathType: Prefix
                    path: /posts
                    backend:
                        service:
                            name: query-cluster-ip-service
                            port:
                                number: 4002
                  - pathType: Prefix
                    path: /posts/?(.*)/comments
                    backend:
                        service:
                            name: comments-cluster-ip-service
                            port:
                                number: 4001
                  - pathType: Prefix
                    path: /?(.*)
                    backend:
                        service:
                            name: client-cluster-ip-service
                            port:
                                number: 3000
